# inferenco-mcp

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  documentation.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/: test_client.rs
scripts/: build.sh  test.sh
src/: main.rs
src/server/: dto.rs  implementation.rs  mod.rs
