[package]
name = "inferenco-mcp"
version = "0.1.0"
edition = "2021"
description = "Inferenco MCP Server - minimal tools using the official Rust SDK"
authors = ["Inferenco Team"]
license = "MIT"
repository = "https://github.com/your-org/inferenco-mcp"

[[bin]]
name = "inferenco-mcp-stdio"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.9.0", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
